examples/test/testpolicy19758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19758
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key15: value47
      key6: value29
      key47: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value0
          key27: value25
          key46: value33
      podSelector:
        matchLabels:
          key49: value26
